Прописали обработку TSensitivity_TextChanged

--- a/VibrationCalculatorFormApp/VibrationCalculatorFormApp.csproj
+++ b/VibrationCalculatorFormApp/VibrationCalculatorFormApp.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="VibroMath">
+      <HintPath>..\..\VibCalculator\VibroMath\bin\Debug\VibroMath.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Form1.cs">
@@ -51,6 +54,9 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModifiedTextBox.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
