Добавил библиотеку в ресурсы, и немного подготовлися к занятию

--- a/VibrationCalculatorFormApp/VibrationCalculatorFormApp.csproj
+++ b/VibrationCalculatorFormApp/VibrationCalculatorFormApp.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="VibroMath, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\VibCalculator\VibroMath\bin\Release\VibroMath.dll</HintPath>
+      <HintPath>Resources\VibroMath.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -72,6 +72,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -85,6 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\VibroMath.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
